--- a/android/PerformanceMonitor/app/src/main/res/values/strings.xml
+++ b/android/PerformanceMonitor/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PerformanceMonitor</string>
+    <string name="measurement">Measurement</string>
 </resources>
